tests/bad/class_function_without_self.rat
/// fail: tests\bad\class_function_without_self.rat:4:5 Class method must include 'self' as first argument

class Test {
    def new() {}
}
